--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,17 +8,23 @@
     <script src="index.js"></script>
   </head>
   <div>
-    <div>
-      <h1 SAIT Software Developer Program Web 2 Assignment 1</h1>
-      <p>
-        Complete the JavaScript exercises below. Check the console for output
-        and fill in the results on this page.
-      </p>
-    </div>
-
-    <div>
+    <header>
+      <!-- Site level header -->
+      <!-- Company logo -->
+      <!-- Navbar -->
+      <!-- signing, shopping cart actions -->
+      <!-- hamburger menu -->
+    </header>
+    <main>
+      <header>
+        <h1>SAIT Software Developer Program Web 2 Assignment 1</h1>
+        <p>
+          Complete the JavaScript exercises below. Check the console for output
+          and fill in the results on this page.
+        </p>
+      </header>
       <section id="exercise-1">
-        <h1>Exercise 1: Print Character Names</h1>
+        <h2>Exercise 1: Print Character Names</h2>
         <p>Print out the names of each character in the console.</p>
         <div class="output">
           <h1>Results:</h1>
@@ -94,6 +100,48 @@
           </div>
         </div>
       </section>
+      <section>
+        <header>
+          <h2>Article Collection</h2>
+        </header>
+        <!-- responsible for layout of articles -->
+        <div>
+          <!-- specific article -->
+          <article>
+            <header>
+              <h3>Article Title</h3>
+              <p></p>
+              <img src="" alt="" />
+              <div>
+                <!-- Author information -->
+              </div>
+            </header>
+            <section>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+                quibusdam, iure neque quisquam esse itaque natus fuga provident
+                ad et! Esse, maxime ab deleniti nemo voluptates, incidunt
+                assumenda nesciunt odio delectus, ipsum rem dolores ducimus
+                laudantium quas magnam ad cupiditate tempore quis? Provident
+                fuga nobis delectus nemo. Consectetur exercitationem sequi
+                pariatur rerum soluta mollitia dolor nam officia cupiditate
+                iusto animi qui a voluptate eligendi aut perspiciatis quam
+                numquam perferendis repellendus dolore, ratione aliquam? Cumque
+                minima blanditiis maiores, quia ea sunt quam consectetur sit
+                illo iusto eligendi modi fugiat. Quisquam laborum culpa odit
+                dignissimos dolor repudiandae facilis sapiente quasi debitis
+                quas!
+              </p>
+            </section>
+            <footer>
+              <p>final info about the article</p>
+            </footer>
+          </article>
+        </div>
+      </section>
     </main>
+    <footer>
+      <p>&copy; 2025 SAIT</p>
+    </footer>
   </div>
 </html>
